[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["fredatar <teslenko.70@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
frozenlist = "1.4.1"
idna = "3.7"
multidict = "6.0.5"
yarl = "1.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
